Fix text overflow in planning edition UI

--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -405,7 +405,7 @@ span.color[data-color=''][data-selected]:after {
           overflow      : hidden;
           padding-right : 0px;
           text-align    : left !important;
-          text-overflow : clip '.';
+          text-overflow : ellipsis;
         }
       }
       .sidebar-close {
